# vault-audit-log-reader

./: .gitignore  2  Cargo.toml  build.rs  test  test.txt
src/: cli.rs  main.rs
