[package]
name = "seek_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.17"
colored = "2.1.0"
colored_json = "5.0.0"
dns-lookup = "2.0.4"
env_logger = "0.11.5"
log = "0.4.22"
num_cpus = "1.16.0"
serde = {version="1.0.210", features=["derive"]}
serde_json = "1.0.128"
tempfile = "3.12.0"
termcolor = "1.4.1"
termcolor-json = "1.0.0"
